Add button to make new code toolboxes

--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
     <div class="container"></div>
 
     <div class="toolbox" id="toolbox">
-        <div class="title">🔧 Toolbox</div>
+        <div class="title">🔧 Toolbox
+            <button id="addToolbox" class="add-btn">+</button>
+        </div>
         <div id="editor">const rect = new fabric.Rect({
-            left: 100,
-            top: 100,
-            width: 80,
-            height: 80,
-            fill: 'blue'
-            });
-            canvas.add(rect);</div>
+            <br /> left: 100,
+            <br /> top: 100,
+            <br /> width: 80,
+            <br /> height: 80,
+            <br /> fill: 'blue' }); canvas.add(rect);
+        </div>
         <button onclick="runCode()" class="run-btn">▶️ Run Code</button>
     </div>
 
